--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .page-home {
-  background-image: url("/images/undraw_taking_notes_tjaf.svg");
+  background-image: url('/images/undraw_taking_notes_tjaf.svg');
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: 49px -40px;
@@ -68,7 +68,7 @@
     // }
   }
   .certified {
-    background-image: url("/images/undraw_experts3_3njd.svg");
+    background-image: url('/images/undraw_experts3_3njd.svg');
     background-repeat: no-repeat;
     background-size: 120%;
     background-position: -100px 0;
