--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,22 +5,21 @@
 
 {{ define "main" }}
 
-<!-- <div class="hero-image hero-image-fixed" style="background-image: url('/images/home/karl-fredrickson-35017-unsplash.jpg');">
-  <h1>Bookkeeping Made Simple, Go Figure...</h1>
-</div> -->
-
 <div class="intro pb-4">
   <div class="container">
     {{ .Content }}
   </div>
 </div>
 
-
 <div class="container pt-3">
   <div class="call">
     <div class="call-box-top">
       <div class="call-phone"><strong>Phone: </strong> {{ .Site.Data.contact.phone }} </div>
-      <div class="call-email"><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">{{ .Site.Data.contact.email }}</a></div>
+      <div class="call-email"><strong>Email: </strong>
+        <a href="mailto:{{ .Site.Data.contact.email }}">
+          {{ .Site.Data.contact.email }}
+        </a>
+      </div>
     </div>
     <div class="call-box-bottom">
       <a href="/contact" class="button">Contact</a>
@@ -29,11 +28,11 @@
 </div>
 
 {{ $services := where (where .Site.RegularPages "Type" "services") ".Params.featured" true }}
-{{if gt (len $services) 0}} 
+{{if gt (len $services) 0}}
 <section class="container">
   <div class="row pt-8 pb-8 pt-md-15 pb-md-15 justify-content-start">
     <div class="col-12">
-        <h2 class="title-3 text-dark mb-4">Our Services</h2>
+      <h2 class="title-3 text-dark mb-4">Our Services</h2>
     </div>
     {{ $services := where (where .Site.RegularPages "Type" "services") ".Params.featured" true }}
     {{ range first 6 (sort $services ".Params.weight") }}
@@ -50,17 +49,17 @@
 
 <div class="container">
   <div class="row pt-5 pb-5 pt-md-9 pb-md-9 justify-content-center">
-      <div class="col-12">
-          <h2 class="title-3 text-dark mb-4">Our Features</h2>
-      </div>
+    <div class="col-12">
+      <h2 class="title-3 text-dark mb-4">Our Features</h2>
+    </div>
     {{ range .Site.Data.features }}
-      <div class="col-12 col-md-6 col-lg-4 mb-2">
-        <div class="feature">
-          {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ .image }}" /></div> {{ end }}
-          <h2 class="feature-title">{{ .title }}</h2>
-          <div class="feature-content">{{ .description }}</div>
-        </div>
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ .image }}" /></div> {{ end }}
+        <h2 class="feature-title">{{ .title }}</h2>
+        <div class="feature-content">{{ .description }}</div>
       </div>
+    </div>
     {{end}}
   </div>
 </div>
@@ -68,5 +67,4 @@
 {{ end }}
 
 {{ define "footer_js" }}
-
 {{ end }}
