--- a/layouts/testimonials/summary.html
+++ b/layouts/testimonials/summary.html
@@ -4,7 +4,5 @@
     <p class="testimonials-name">{{ .Params.name }}</p>
     <p class="testimonials-jobtitle">{{ .Params.jobtitle }}</p>
   </div>
-  <div class="testimonials-content">
-    {{ .Content }}
-  </div>
+  <div class="testimonials-content">{{ .Content }}</div>
 </article>
