--- a/layouts/testimonials/list.html
+++ b/layouts/testimonials/list.html
@@ -1,22 +1,19 @@
 {{ define "header_css" }}{{ end }}
-{{ define "body_classes" }}page-testimonials-list{{end}}
+{{ define "body_classes" }}page-testimonials-list{{ end }}
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
 <div class="intro">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        {{ .Content }}
-      </div>
+      <div class="col-12">{{ .Content }}</div>
     </div>
   </div>
 </div>
 
-
 <div class="container pb-6">
   <div class="row">
-    {{ range .Pages.ByWeight }}
+    {{ range.Pages.ByWeight }}
     <div class="col-12 col-md-6 mb-2 ">{{ .Render "summary" }}</div>
     {{ end }}
   </div>
