--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 50px;
   color: $primary;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,4 +19,3 @@
     }
   }
 }
-
