--- a/layouts/team/summary.html
+++ b/layouts/team/summary.html
@@ -1,11 +1,7 @@
 <article class="team team-summary">
   {{ if .Params.image }}
   <div class="team-image">
-    <img
-      alt="{{ .Title }} logo"
-      class="img-fluid mb-2"
-      src="{{ .Params.image }}"
-    />
+    <img alt="{{ .Title }} logo" class="img-fluid mb-2" src="{{ .Params.image }}" />
   </div>
   {{ end }}
   <div class="team-meta">
