--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer-strip {
-  // box-shadow: 0px -4px 9px 0 rgba(36, 50, 66, 0.15);
   background: $secondary;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -15,7 +14,7 @@
     align-items: center;
   }
   .footer-title {
-    color: #fff;
+    color: #ffffff;
     font-size: 1.3rem;
     font-family: $font-family-heading;
     margin-bottom: 10px;
@@ -33,9 +32,9 @@
       display: block;
       margin-right: 10px;
       font-size: 0.8rem;
-      color: #fff;
+      color: #ffffff;
       a {
-        color: #fff;
+        color: #ffffff;
         text-decoration: none;
         &:hover {
           text-decoration: underline;
@@ -43,7 +42,7 @@
       }
       &.copyright {
         font-weight: bold;
-        color: #fff;
+        color: #ffffff;
       }
     }
     @include media-breakpoint-up(sm) {
