adjust homepage sizing on tablet and mobile

--- a/assets/scss/components/_title.scss
+++ b/assets/scss/components/_title.scss
@@ -7,14 +7,13 @@
     font-size: 3rem;
   }
   &.black {
-    color: #222;
+    color: #222222;
   }
 }
-
 .title-2 {
   font-family: $font-family-base;
   font-weight: light;
-  color: #333;
+  color: #333333;
   font-size: 2.4rem;
   @include media-breakpoint-up(md) {
     font-size: 4rem;
@@ -23,12 +22,14 @@
     display: block;
   }
 }
-
 .title-3 {
   font-family: $font-family-base;
   font-weight: light;
-  color: #333;
+  color: #333333;
   font-size: 1.6rem;
+  @include media-breakpoint-up(sm) {
+    font-size: 2rem;
+  }
   @include media-breakpoint-up(md) {
     font-size: 2.4rem;
   }
