--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -4,6 +4,18 @@
   align-items: center;
   padding-top: 200px;
   padding-bottom: 100px;
+  @include media-breakpoint-up(sm) {
+    padding-top: 160px;
+    padding-bottom: 80px;
+  }
+  @include media-breakpoint-up(md) {
+    padding-top: 160px;
+    padding-bottom: 80px;
+  }
+  @include media-breakpoint-up(lg) {
+    padding-top: 200px;
+    padding-bottom: 100px;
+  }
   h1 {
     color: $primary;
     font-size: 2.4rem;
