--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -8,22 +8,21 @@
     background-position: 159px -40px;
   }
   @include media-breakpoint-up(md) {
-    background-size: 85%;
-    background-position: 199px -80px;
+    background-size: 70%;
+    background-position: 100% -50px;
   }
   @include media-breakpoint-up(lg) {
     background-size: 60%;
     background-position: 100% -70px;
   }
-
   .call {
     position: relative;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 4px;
     box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1),
       0 5px 15px rgba(0, 0, 0, 0.07);
-    width: 50%;
+    width: 100%;
     color: $secondary;
     display: flex;
     align-items: flex-start;
@@ -31,6 +30,13 @@
     @include media-breakpoint-up(sm) {
       align-items: center;
       flex-direction: row;
+      width: 90%;
+    }
+    @include media-breakpoint-up(md) {
+      width: 70%;
+    }
+    @include media-breakpoint-up(lg) {
+      width: 50%;
     }
     .call-box-top {
       flex: 1 0 auto;
