--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -8,6 +8,9 @@
             <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
                 {{ .Site.Data.contact.email }}</a></li>
           </ul>
+          <ul>
+            <li><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
+          </ul>
         </div>
       </div>
     </div>
