--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -33,6 +33,9 @@
       margin-right: 10px;
       font-size: 0.8rem;
       color: #ffffff;
+      &:last-of-type {
+        margin-right: 0;
+      }
       a {
         color: #ffffff;
         text-decoration: none;
