--- a/assets/scss/pages/team/_page-team-list.scss
+++ b/assets/scss/pages/team/_page-team-list.scss
@@ -1,5 +1,5 @@
 .page-team-list {
-  background-image: url("/images/undraw_hang_out_h9ud.svg");
+  background-image: url('../images/undraw_hang_out_h9ud.svg');
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: 49px -40px;
