fix google analytics partial

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,7 +41,7 @@
   <script type="text/javascript" src="{{ ($scripts | minify | fingerprint).RelPermalink }}"></script>
   {{ end }}
 
-  {{ partial "google-analytics.html" }}
+  {{ partial "google-analytics.html" . }}
 
 </body>
 </html>
