--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,22 +1,18 @@
 {{ define "header_css" }}{{ end }}
-{{ define "body_classes" }}{{ end }}
+{{ define "body_classes" }}page-default-single{{ end }}
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-9">
-      <h1>{{.Title}}</h1>
-      {{ dateFormat "Monday, Jan 2, 2006" .Date }}
-      {{if .Params.author}}Author: {{.Params.Author}}{{end}}
-      <div class="content">
-        {{.Content}}
+<div class="strip">
+  <div class="container pt-4 pt-md-10">
+    <div class="row justify-content-start">
+      <div class="col-12 col-md-8">
+        <div class="service service-single">
+          <h1 class="title">{{.Title}}</h1>
+          <div class="content">{{.Content}}</div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-<div class="template-name">_default/single.html</div>
-
 {{ end }}
