--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,7 +1,6 @@
 <div class="summary">
-  {{ if .Params.image }}
-  <img alt="{{ .Title }}" src="{{ .Params.image }}" />
-  {{ end}}
-  <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-  {{ .Content | truncate 100 }}
+    <h2>
+      <a href="{{ .Permalink }}">{{ .Title }}</a>
+    </h2>
+    {{ .Content | truncate 120 "..." }}
 </div>
