--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,12 @@
-<div class="footer-strip">
+<div class="footer">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="footer">
+        <div class="footer-inner">
           <h3 class="footer-title">{{.Site.Title}}</h3>
           <ul class="footer-menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="{{ .Site.BaseURL }}">Home</a></li>
+            <li><a href="{{ .Site.BaseURL }}contact">Contact</a></li>
             <li class="copyright">© {{ now.Format "2006" }} {{.Site.Title}}</li>
           </ul>
         </div>
