--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="container pb-6">
+<div class="container pb-6 pb-md-10">
   <div class="row">
     {{ range .Pages.ByWeight }}
     <div class="col-12 col-md-6 mb-2 ">{{ .Render "summary" }}</div>
