--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -1,8 +1,8 @@
-<div class="sub-footer-strip">
+<div class="sub-footer">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="sub-footer">
+        <div class="sub-footer-inner">
           <ul>
             <li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li>
             <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
