--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -9,7 +9,7 @@
                 {{ .Site.Data.contact.email }}</a></li>
           </ul>
           <ul>
-            <li><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
+            <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
           </ul>
         </div>
       </div>
