--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -27,10 +27,8 @@ $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'Open Sans', 'Helvetica Neue', Arial, sans-serif,
-  -apple-system;
-$font-family-heading: 'Lora', 'Helvetica Neue', Arial, sans-serif, -apple-system;
-$font-size-base: 1rem; // Assumes the browser default, typically `16px`
+$font-family-base: 'Open Sans', Arial, sans-serif, -apple-system;
+$font-family-heading: 'Lora', Arial, sans-serif, -apple-system;
 $font-weight-thin: 200;
 $font-weight-light: 300;
 $font-weight-normal: 400;
