--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -32,12 +32,14 @@
     li {
       display: block;
       margin-right: 10px;
-      color: lighten($secondary, 60%);
+      color: lighten($secondary, 50%);
+      font-size: 0.9rem;
+      line-height: 1.8;
       &:last-of-type {
         margin-right: 0;
       }
       a {
-        color: lighten($secondary, 60%);
+        color: lighten($secondary, 50%);
         text-decoration: none;
         &:hover {
           text-decoration: underline;
@@ -45,7 +47,11 @@
       }
       &.copyright {
         font-weight: bold;
-        color: #ffffff;
+        color: lighten($secondary, 50%);
+        display: none;
+        @include media-breakpoint-up(md) {
+          display: inline-block;
+        }
       }
     }
     @include media-breakpoint-up(sm) {
