--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -20,7 +20,8 @@
     overflow: hidden;
     background-color: #ffffff;
     border-radius: 4px;
-    box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1),
+    box-shadow:
+      0 15px 35px rgba(50, 50, 93, 0.1),
       0 5px 15px rgba(0, 0, 0, 0.07);
     width: 100%;
     color: $secondary;
@@ -92,7 +93,7 @@
     @include media-breakpoint-up(lg) {
       padding-top: 280px;
       background-size: 85%;
-      background-position: -170px 0px;
+      background-position: -170px 0;
     }
     h1 {
       text-align: right;
