--- a/assets/scss/pages/services/_page-services-single.scss
+++ b/assets/scss/pages/services/_page-services-single.scss
@@ -1,2 +1,18 @@
 .page-services-single {
+  h1.title {
+    font-size: 3rem;
+    font-family: $font-family-heading;
+    color: $primary;
+  }
+  .content {
+    > p {
+      &:first-of-type {
+        font-size: 1.6rem;
+        line-height: 1.4;
+        margin-bottom: 40px;
+        font-weight: regular;
+        color: rgb(104, 104, 104);
+      }
+    }
+  }
 }
