--- a/layouts/testimonials/summary.html
+++ b/layouts/testimonials/summary.html
@@ -1,8 +1,8 @@
-<article class="testimonials testimonials-summary">
+<div class="testimonials testimonials-summary">
   <div class="testimonials-meta">
     <h2 class="testimonials-title">{{ .Title }}</h2>
     <p class="testimonials-name">{{ .Params.name }}</p>
     <p class="testimonials-jobtitle">{{ .Params.jobtitle }}</p>
   </div>
   <div class="testimonials-content">{{ .Content }}</div>
-</article>
+</div>
