homepage design changes, illustration position changes

--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -49,6 +49,9 @@
     @include media-breakpoint-up(lg) {
       width: 55%;
     }
+    @include media-breakpoint-up(xl) {
+      width: 45%;
+    }
   }
 }
 .intro-small {
