--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,10 +30,10 @@
 
 {{ $services := where (where .Site.RegularPages "Type" "services") ".Params.featured" true }}
 {{if gt (len $services) 0}}
-<div class="container pt-8 pt-md-10">
+<div class="container pt-8 pt-md-12 pb-md-12">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Services</h2>
+      <h2 class="mb-3">Services</h2>
     </div>
     {{ $services := where (where .Site.RegularPages "Type" "services") ".Params.featured" true }}
     {{ range first 6 (sort $services ".Params.weight") }}
@@ -48,10 +48,11 @@
 </div>
 {{end}}
 
-<div class="container pt-5 pb-5 pt-md-7 pb-md-7">
+<div class="strip strip-grey">
+<div class="container pt-5 pb-5 pt-md-8 pb-md-8">
   <div class="row justify-content-center">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Features</h2>
+      <h2 class="text-center text-dark mb-3">Features</h2>
     </div>
     {{ range .Site.Data.features }}
     <div class="col-12 col-md-6 col-lg-4 mb-2">
@@ -64,7 +65,7 @@
     {{end}}
   </div>
 </div>
-
+</div>
 {{ end }}
 
 {{ define "footer_js" }}
