--- a/assets/scss/pages/team/_page-team-list.scss
+++ b/assets/scss/pages/team/_page-team-list.scss
@@ -12,7 +12,11 @@
     background-position: 199px -80px;
   }
   @include media-breakpoint-up(lg) {
-    background-size: 60%;
+    background-size: 70%;
     background-position: 100% -110px;
+  }
+  @include media-breakpoint-up(xl) {
+    background-size: 55%;
+    background-position: 90% -120px;
   }
 }
