--- a/layouts/partials/google-analytics.html
+++ b/layouts/partials/google-analytics.html
@@ -1,13 +1,32 @@
+{{- if .Site.IsServer -}}
+<!-- Dont add Google analytics to localhost -->
+{{ else }}
+{{ $gid := (getenv "HUGO_GOOGLE_ANALYTICS_ID") }}
+{{ if $gid }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{- $gid -}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '{{- $gid -}}');
+</script>
+{{ else }}
 {{ if .Site.Params.google_analytics_id }}
-{{ if ne .Site.IsServer true}}
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.google_analytics_id }}"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', '{{ .Site.Params.google_analytics_id }}');
-  </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{- .Site.Params.google_analytics_id -}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '{{- .Site.Params.google_analytics_id -}}');
+</script>
 {{ end }}
+{{ end}}
 {{ end }}
