revise blue theme, better image config, logo config, mobile menu

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,8 @@
-$primary: #f88379;
-$secondary: #575766;
+$primary: #2e86f8;
+// $primary: #f88379;
+$secondary: #f88379;
 $white: #ffffff;
-$black: #141414;
+$black: #2f2f41;
 $steel: rgb(92, 90, 90);
 $ghost: #f4f5fb;
 
