--- a/layouts/partials/hamburger.html
+++ b/layouts/partials/hamburger.html
@@ -1,4 +1,4 @@
-<button id="toggle-main-menu-mobile" class="hamburger hamburger--slider" role="presentation" aria-label="mobile menu trigger">
+<button id="toggle-main-menu-mobile" class="hamburger hamburger--slider" type="button">
   <span class="hamburger-box">
     <span class="hamburger-inner"></span>
   </span>
