--- a/assets/scss/components/_call.scss
+++ b/assets/scss/components/_call.scss
@@ -5,7 +5,6 @@
   border-radius: 4px;
   // box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
   width: 100%;
-  color: $secondary;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -31,6 +30,9 @@
   .call-name {
     font-size: 1.1rem;
     font-weight: bold;
+  }
+  .call-phone {
+    margin-bottom: 5px;
   }
   strong {
     font-weight: bold;
