--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -4,14 +4,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // box-shadow: 0 1px 15px rgba(128, 128, 129, 0.2);
-  z-index: 10;
-  position: relative;
-  height: 60px;
-  border-bottom: 1px solid $ghost;
+  padding: 10px 0 10px 0;
+  // box-shadow: 0 1px 15px rgba(50, 50, 93, 0.2);
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  &.header-absolute {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+  }
+}
+.lock-scroll {
+  .header {
+    &.header-absolute {
+      position: static;
+    }
   }
 }
