--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -6,17 +6,17 @@
   padding-bottom: 60px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 160px;
-    padding-bottom: 100px;
-  }
-  @include media-breakpoint-up(lg) {
-    padding-top: 160px;
-    padding-bottom: 160px;
+    padding-top: 140px;
+    padding-bottom: 140px;
   }
   h1 {
-    color: $primary;
-    font-size: 48px;
+    color: $black;
+    font-size: 42px;
     line-height: 1.2;
+    @include media-breakpoint-up(md) {
+      width: 80%;
+      font-size: 48px;
+    }
     @include media-breakpoint-up(lg) {
       font-size: 50px;
     }
@@ -34,34 +34,10 @@
     font-size: 1.2rem;
     font-weight: light;
     line-height: 1.5;
-    color: $secondary;
+    color: $black;
   }
 }
-.intro-image-flying {
-  max-width: none;
-  width: 40%;
-  margin-bottom: 20px;
-  // @include media-breakpoint-up(sm) {
-  //   width: 60%;
-  // }
-  @include media-breakpoint-up(md) {
-    margin-bottom: 0;
-    position: absolute;
-    bottom: 40px;
-    right: -140px;
-    width: 160%;
-  }
-  @include media-breakpoint-up(lg) {
-    bottom: -80px;
-    right: -120px;
-    width: 130%;
-  }
-  @include media-breakpoint-up(xl) {
-    bottom: -160px;
-    right: -100px;
-    width: 120%;
-  }
-}
+
 .intro-small {
   padding-top: 100px;
   padding-bottom: 30px;
