--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -31,3 +31,14 @@
     height: 100%;
   }
 }
+
+.logo {
+  path {
+    #Hugo {
+      fill: '#141414';
+    }
+    #Serif {
+      fill: red;
+    }
+  }
+}
