--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,9 +23,13 @@
         {{ .Content }}
         {{ partial "call.html" . }}
       </div>
+      {{ if .Params.intro_image }}
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img class="intro-image-flying" src="{{ .Params.intro_image | relURL }}" />
+        <img
+          class="intro-image{{ if .Params.intro_image_absolute }} intro-image-absolute{{ end }}{{ if .Params.intro_image_hide_on_mobile }} intro-image-hide-mobile{{ end }}"
+          src="{{ .Params.intro_image | relURL }}" />
       </div>
+      {{ end }}
     </div>
   </div>
 </div>
