updating readme, favicon and screenshots

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -52,23 +52,23 @@ body {
 
 // Display breakpoints for DEV
 {{ if .Site.IsServer }}
-body:after {
-  color: #000000;
-  font-size: 12px;
-  padding: 5px;
-  font-weight: bold;
-  right: 10px;
-  position: fixed;
-  text-align: center;
-  text-transform: uppercase;
-  bottom: 10px;
-  width: 200px;
-  z-index: 9999;
-  border: solid 1px #000000;
-  @each $name, $value in $grid-breakpoints {
-    @include media-breakpoint-up($name) {
-      content: '#{$name} - min-width: #{$value}';
-    }
-  }
-}
+// body:after {
+//   color: #000000;
+//   font-size: 12px;
+//   padding: 5px;
+//   font-weight: bold;
+//   right: 10px;
+//   position: fixed;
+//   text-align: center;
+//   text-transform: uppercase;
+//   bottom: 10px;
+//   width: 200px;
+//   z-index: 9999;
+//   border: solid 1px #000000;
+//   @each $name, $value in $grid-breakpoints {
+//     @include media-breakpoint-up($name) {
+//       content: '#{$name} - min-width: #{$value}';
+//     }
+//   }
+// }
 {{ end }}
