--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 10px 0 10px 0;
   // box-shadow: 0 1px 15px rgba(50, 50, 93, 0.2);
+  border-bottom: 1px solid $ghost;
   .container {
     display: flex;
     justify-content: space-between;
